Fixed wrong center alignment

--- a/ttrpg/src/styles.sass
+++ b/ttrpg/src/styles.sass
@@ -14,6 +14,10 @@
 
 .center-vertically
 	display: flex
+	align-content: center
+
+.center-items-vertically
+	display: flex
 	align-items: center
 
 .align-top
